QA-1948 fixed jvm options property parsing